Mon Dec 11 16:58:31 1995  Chris Provenzano (proven@mit.edu)

	* kdc_preauth.c return_padata(): Initialize local variable "size" 
		to 0 before using it.

Thu Nov 30 20:57:11 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* kdc_preauth.c: #@&^(!! Ultrix cc sucks.  Typedef to function
		pointer rather than function prototype to avoid lossage.

Wed Nov 29 13:31:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* do_tgs_req.c (process_tgs_req): Removed extra eblock argument
		from call to krb5_encode_kdc_rep.

Fri Nov 17 22:41:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* do_as_req.c (process_as_req): Removed extra eblock argument from
		call to krb5_encode_kdc_rep.

Mon Nov 13 19:40:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_util.h: Added new prototypes for return_padata() and
	        check_padata().

	* kdc_preauth.c (return_padata): New function which calls out to
		each preauth type to see if it is necessary to return
		preauth data or not.
	(return_pw_salt): New function responsible for returning the
		KRB5_PW_SALT preauth information.

	* do_as_req.c (process_as_req):  Move creation of the PW_SALT
		preauthentication step into kdc_preauth.c.  Call
		return_pdata() which is responsible for all padata info
		which is returned by the KDC in the KRB_AS_REP message.


Thu Nov  9 00:05:55 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_preauth.c (get_etype_info): Added function to return the
		etype_info preauth hint to the client.

	* kdc_util.c (get_salt_from_key): Added new function which
		determines the salting information from the krb5_key_data
		structure.

	* main.c (kdc_initialize_rcache): Replace use of krb5_clockskew
		with context->clockskew.

Wed Nov  8 02:57:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_util.c (): Added new helper functions
		dbentry_has_key_for_enctype(), dbentry_supports_enctype(),
		and select_session_keytype().

	* kdc_preauth.c: Added support for the ENC_TIMESTAMP
		preauthentication scheme.
