@@ -36,6 +36,7 @@
 #include "kdc_util.h"
 #include "extern.h"
 #include "kdc5_err.h"
+#include "kdb_dbc.h"
 #ifdef KRB5_USE_INET
 #include <netinet/in.h>
 #endif
@@ -257,6 +258,8 @@ finish_realm(rdp)
 	free(rdp->realm_ports);
     if (rdp->realm_kstypes)
 	free(rdp->realm_kstypes);
+    if (rdp->realm_keytab)
+	krb5_kt_close(rdp->realm_context, rdp->realm_keytab);
     if (rdp->realm_context) {
 	if (rdp->realm_mprinc)
 	    krb5_free_principal(rdp->realm_context, rdp->realm_mprinc);
@@ -296,6 +299,7 @@ init_realm(progname, rdp, realm, def_dbname, def_mpname,
     char		*def_ports;
     krb5_boolean	def_manual;
 {
+    krb5_db_context	db_context;
     krb5_error_code	kret;
     krb5_boolean	manual;
     krb5_db_entry	db_entry;
@@ -527,6 +531,20 @@ init_realm(progname, rdp, realm, def_dbname, def_mpname,
 			"while processing master key for realm %s", realm);
 		goto whoops;
 	    }
+
+/* Set master encblock with db_context */
+if ((kret = krb5_dbm_db_set_mkey(rdp->realm_context, &db_context, 
+				 &rdp->realm_encblock))) {
+com_err(progname, kret, "while setting master key for realm %s", realm);
+goto whoops;
+}
+
+/* Set up the keytab */
+if (kret = krb5_ktkdb_resolve(rdp->realm_context, &db_context, 
+			      &rdp->realm_keytab)) {
+com_err(progname, kret, "while resolving kdb keytab for realm %s", realm);
+goto whoops;
+}
 
 	    /* Preformat the TGS name */
 	    if ((kret = krb5_build_principal(rdp->realm_context,
